@@ -263,37 +263,35 @@ shell_protect(const string & file)
     return safefile;
 }
 
+struct ReadError {};
+
 static string
 file_to_string(const string &file)
 {
-    string out = "";
+    string out;
     struct stat st;
     int fd = open(file.c_str(), O_RDONLY);
-    if (fd >= 0) {
-	if (fstat(fd, &st) == 0 && S_ISREG(st.st_mode)) {
-	    // Distinguish "empty file" from "failed to read file"
-	    if (st.st_size == 0) {
-		out = " ";
-	    } else {
-		char *blk = (char*)malloc(st.st_size);
-		if (blk) {
-		    char *p = blk;
-		    int len = st.st_size;
-		    while (len) {
-			int r = read(fd, p, len);
-			if (r < 0) break;
-			p += r;
-			len -= r;
-		    }
-		    if (len == 0) {
-			out = string(blk, st.st_size);
-		    }
-		    free(blk);
-		}
-	    }
-	}
+    if (fd == -1) throw ReadError();
+    if (fstat(fd, &st) == -1 || !S_ISREG(st.st_mode)) {
 	close(fd);
+	throw ReadError();
     }
+
+    if (st.st_size > 0) {
+	out.reserve(st.st_size);
+	char blk[4096];
+	while (true) {
+	    int r = read(fd, blk, sizeof(blk));
+	    if (r < 0) {
+		if (errno == EINTR) continue;
+		close(fd);
+		throw ReadError();
+	    }
+	    if (r == 0) break; // end of file
+	    out.append(blk, r);
+	}
+    }
+    close(fd);
     return out;
 }
 
@@ -308,13 +306,11 @@ stdout_to_string(const string &cmd)
 	size_t len = fread(buf, 1, 4096, fh);
 	if (ferror(fh)) {
 	    (void)fclose(fh);
-	    return "";
+	    throw ReadError();
 	}
 	out.append(buf, len);
     }
-    if (fclose(fh) == -1) return "";
-    // Distinguish "no text extracted" from "extraction failed"
-    if (out.empty()) return " ";
+    if (fclose(fh) == -1) throw ReadError();
     return out;
 }
 
@@ -335,8 +331,10 @@ index_file(const string &url, const string &mimetype, time_t last_mod)
     }
 
     if (mimetype == "text/html") {
-	string text = file_to_string(file);
-	if (text.empty()) {
+	string text;
+	try {
+	    text = file_to_string(file);
+	} catch (ReadError) {
 	    cout << "can't read \"" << file << "\" - skipping\n";
 	    return;
 	}
@@ -356,32 +354,40 @@ index_file(const string &url, const string &mimetype, time_t last_mod)
 	keywords = p.keywords;
 	sample = p.sample;
     } else if (mimetype == "text/plain") {
-	dump = file_to_string(file);
-	if (dump.empty()) {
+	try {
+	    dump = file_to_string(file);
+	} catch (ReadError) {
 	    cout << "can't read \"" << file << "\" - skipping\n";
 	    return;
 	}
     } else if (mimetype == "application/pdf") {
 	string safefile = shell_protect(file);
 	string cmd = "pdftotext " + safefile + " -";
-	cout << "[" << cmd << "]" << endl;
-	dump = stdout_to_string(cmd);
-	if (dump.empty()) {
+	try {
+	    dump = stdout_to_string(cmd);
+	} catch (ReadError) {
 	    cout << "\"" << cmd << "\" failed - skipping\n";
 	    return;
 	}
 
-	title = stdout_to_string("pdfinfo " + safefile +
-				 "|sed 's/^Title: *//p;d'");
-	if (title == " ") title = "";
-
-	keywords = stdout_to_string("pdfinfo " + safefile +
-				    "|sed 's/^Keywords: *//p;d'");
-	if (keywords == " ") keywords = "";
+	try {
+	    title = stdout_to_string("pdfinfo " + safefile +
+				     "|sed 's/^Title: *//p;d'");
+	} catch (ReadError) {
+	    title = "";
+	}
+	    
+	try {
+	    keywords = stdout_to_string("pdfinfo " + safefile +
+					"|sed 's/^Keywords: *//p;d'");
+	} catch (ReadError) {
+	    keywords = "";
+	}
     } else if (mimetype == "application/postscript") {
 	string cmd = "pstotext " + shell_protect(file);
-	dump = stdout_to_string(cmd);
-	if (dump.empty()) {
+	try {
+	    dump = stdout_to_string(cmd);
+	} catch (ReadError) {
 	    cout << "\"" << cmd << "\" failed - skipping\n";
 	    return;
 	}
